data/derived/comb/progs/unify/prog0106.ml.out
Characters 451-485:
  | Sine_Avg (a,b,c) -> eval( eval (a, sin(pi*.(x)), sin(pi*.y)) , eval (b, sin(pi*.x), sin(pi*.y)), eval (c, sin(pi*.x), sin(pi*.y)) )/.(3.0);;
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         expr
